--- a/freecodecamp/survey-form/index.html
+++ b/freecodecamp/survey-form/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>freeCodeCamp Survey Form</title>
         <link rel="stylesheet" href="styles.css">
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     </head>
     <header>
-        <img src="https://design-style-guide.freecodecamp.org/downloads/fcc_primary_large.svg">
+        <img src="https://design-style-guide.freecodecamp.org/downloads/fcc_primary_large.svg" alt="freeCodeCamp logo">
         <h1 id="title">Survey Form</h1>
         <h2 id="description">Thank you for taking the time to help us improve the platform!</h2>
     </header>
@@ -19,11 +19,11 @@
         <form id="survey-form" action="https://register-demo.freecodecamp.org">
             <fieldset>
                 <label for="name-label" id="name-label">
-                <label for="name">Name </label><input id="name" type="text" name="name" required placeholder="Enter your name"/></label>
+                <label for="name">Name </label><input id="name" type="text" name="name" required placeholder="Enter your name"></label>
                 <label for="email-label" id="email-label">
-                <label for="email">Email </label><input id="email" type="email" name="email" required placeholder="Enter your email"/></label>
+                <label for="email">Email </label><input id="email" type="email" name="email" required placeholder="Enter your email"></label>
                 <label for="number-label" id="number-label">
-                <label for="number">Age (optional) </label><input id="number" type="number" name="age" min="13" max="120" placeholder="Age"/></label>
+                <label for="number">Age (optional) </label><input id="number" type="number" name="age" min="13" max="120" placeholder="Age"></label>
                 <hr>
                 <p>Which option best describes your current role?</p>
                 <label>
