added line height styling for h1

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -13,6 +13,7 @@
         <img src="images/heart-balloons.png" width="50%">
         <h1>freecodecamp responsive web dev projects.</h1>
             <h2><a href="freecodecamp/survey-form/index.html">freeCodeCamp Survey Form</a></h2>
+            <img src="images/FCC-project-1-screenshot.png" width="50%">
             <hr>
             <h2>⬅ <a href="index.html">back</a></h2>
     </body>
