added test CSS gallery page

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -15,6 +15,7 @@
             <h2><a href="freecodecamp/survey-form/index.html">freeCodeCamp Survey Form</a></h2>
             <img src="images/FCC-project-1-screenshot.png" width="50%">
             <hr>
+            <h2><a href="test-gallery.html">Test CSS Gallery (Responsive)</a></h2>
             <h2>⬅ <a href="index.html">back</a></h2>
     </body>
     <footer>
