added new h1 text

--- a/test-gallery.html
+++ b/test-gallery.html
@@ -62,7 +62,7 @@ div.desc {
 </head>
 <body>
 
-<h2>Responsive Image Gallery using CSS</h2>
+<h2>freeCodeCamp Certification Projects</h2>
 
 <div class="responsive">
   <div class="gallery">
