test gallery content

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -10,7 +10,7 @@
     </head>
     
     <body>
-        <img src="images/heart-balloons.png" width="50%">
+        <img src="images/disco-sprinkles.png"  width="80%">
         <h1>Skillcrush projects.</h1>
         <br>
         <h2>⬅ <a href="index.html">back</a></h2>
