--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
 <body>
     <img src="images/flamingo-floatie.png" width="50%">
     <h1>Be the flamingo.</h1>
+    <h2>freecodecamp responsive web dev <a href="freecodecamp.html">projects</a></h2>
     <h2>Scrimba <a href="scrimba.html">exercises + notes [2023]</a></h2>
     <h2>Skillcrush refresher <a href="skillcrush.html">projects [2023]</a></h2>
-    <h2>freecodecamp responsive web dev <a href="freecodecamp.html">projects</a></h2>
+   
     <br>
 </body>
 
 <footer>
-    <p>💌 <a href="mailto:victoriahfarr@gmail.com">Victoria made this in 2023.</a></p>
+    <p>🪩 <a href="mailto:victoriahfarr@gmail.com">Victoria made this in 2023.</a></p>
     <p>🦩 photo by <a
         href="https://www.pexels.com/photo/pink-flamingo-inflatable-ring-and-green-inflatable-ring-on-swimming-pool-565999/">Toni
         Cuenca</a></p>
