--- a/test-gallery.html
+++ b/test-gallery.html
@@ -75,29 +75,39 @@ div.desc {
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_forest.jpg">
-      <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+    <a target="_blank" href="images/funny-rabbit.jpg">
+      <img src="images/funny-rabbit.jpg" alt="bunny" width="600" height="400">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="desc">Tribute Page Project</div>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_lights.jpg">
-      <img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">
+    <a target="_blank" href="images/funny-rabbit.jpg">
+      <img src="images/funny-rabbit.jpg" alt="bunny" width="600" height="400">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="desc">Technical Documentation Page Project</div>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
+    <a target="_blank" href="images/funny-rabbit.jpg">
+      <img src="images/funny-rabbit.jpg" alt="Northern Lights" width="600" height="400">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="desc">Product Landing Page Project</div>
   </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="images/funny-rabbit.jpg">
+      <img src="images/funny-rabbit.jpg" alt="Mountains" width="600" height="400">
+    </a>
+    <div class="desc">Personal Portfolio Website Project</div>
+  </div>
+  
 </div>
 
 <div class="clearfix"></div>
