CSS cursor fun Initial commit

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -16,6 +16,8 @@
             <img src="images/FCC-project-1-screenshot.png" width="50%">
             <hr>
             <h2><a href="test-gallery.html">Test CSS Gallery (Responsive)</a></h2>
+            <hr>
+            <h2><a href="freecodecamp/CSS-cursor-fun.html">CSS Cursor Property Test Page</a></h2>
             <h2>⬅ <a href="index.html">back</a></h2>
     </body>
     <footer>
