added links for cursor tests

--- a/freecodecamp/CSS-cursor-fun.html
+++ b/freecodecamp/CSS-cursor-fun.html
@@ -10,10 +10,22 @@
     </head>
     
     <body>
-        <h1>freecodecamp responsive web dev projects.</h1>
+        <h1>CSS Cursor Properties</h1>
+        <p><a href="https://www.w3schools.com/cssref/pr_class_cursor.php">W3schools article</a></p>
             <h2><a href="#" class="alias">alias</a></h2>
             <h2><a href="#" class="all-scroll">all-scroll</a></h2>
-            
+            <h2><a href="#" class="auto">auto</a></h2>
+            <h2><a href="#" class="cell">cell</a></h2>
+            <h2><a href="#" class="col-resize">col-resize</a></h2>
+            <h2><a href="#" class="context-menu">context-menu</a></h2>
+            <h2><a href="#" class="copy">copy</a></h2>
+            <h2><a href="#" class="crosshair">crosshair</a></h2>
+            <h2><a href="#" class="default">default</a></h2>
+            <h2><a href="#" class="e-resize">e-resize</a></h2>
+            <h2><a href="#" class="ew-resize">ew-resize</a></h2>
+            <h2><a href="#" class="grab">grab</a></h2>
+            <h2><a href="#" class="grabbing">grabbing</a></h2>
+            <h2><a href="#" class="help">help</a></h2>
     </body>
     <footer>
         <h2>⬅ <a href="index.html">back</a></h2>
