--- a/freecodecamp/CSS-cursor-fun.html
+++ b/freecodecamp/CSS-cursor-fun.html
@@ -26,6 +26,20 @@
             <h2><a href="#" class="grab">grab</a></h2>
             <h2><a href="#" class="grabbing">grabbing</a></h2>
             <h2><a href="#" class="help">help</a></h2>
+            <h2><a href="#" class="move">move</a></h2>
+            <h2><a href="#" class="n-resize">n-resize</a></h2>
+            <h2><a href="#" class="ne-resize">ne-resize</a></h2>
+            <h2><a href="#" class="nesw-resize">nesw-resize</a></h2>
+            <h2><a href="#" class="ns-resize">ns-resize</a></h2>
+            <h2><a href="#" class="nwse-resize">nwse-resize</a></h2>
+            <h2><a href="#" class="no-drop">no-drop</a></h2>
+            <h2><a href="#" class="none">none</a></h2>
+            <h2><a href="#" class="not-allowed">not-allowed</a></h2>
+            <h2><a href="#" class="progress">progress</a></h2>
+            <h2><a href="#" class="row-resize">row-resize</a></h2>
+            <h2><a href="#" class="text">text</a></h2>
+            <h2><a href="#" class="url">url custom</a></h2>
+            <h2><a href="#" class="pointer">pointer</a></h2>
     </body>
     <footer>
         <h2>⬅ <a href="index.html">back</a></h2>
