more cursor property shenanigans

--- a/freecodecamp/CSS-cursor-fun.html
+++ b/freecodecamp/CSS-cursor-fun.html
@@ -38,7 +38,7 @@
             <h2><a href="#" class="progress">progress</a></h2>
             <h2><a href="#" class="row-resize">row-resize</a></h2>
             <h2><a href="#" class="text">text</a></h2>
-            <h2><a href="#" class="url">url custom</a></h2>
+            <h2><a href="#" class="url2">url custom 2 smile</a></h2>
             <h2><a href="#" class="pointer">pointer</a></h2>
     </body>
     <footer>
