yet more custom cursor shenanigans

--- a/freecodecamp/CSS-cursor-fun.html
+++ b/freecodecamp/CSS-cursor-fun.html
@@ -11,35 +11,18 @@
     
     <body>
         <h1>CSS Cursor Properties</h1>
-        <p><a href="https://www.w3schools.com/cssref/pr_class_cursor.php">W3schools article</a></p>
-            <h2><a href="#" class="alias">alias</a></h2>
-            <h2><a href="#" class="all-scroll">all-scroll</a></h2>
-            <h2><a href="#" class="auto">auto</a></h2>
-            <h2><a href="#" class="cell">cell</a></h2>
-            <h2><a href="#" class="col-resize">col-resize</a></h2>
-            <h2><a href="#" class="context-menu">context-menu</a></h2>
-            <h2><a href="#" class="copy">copy</a></h2>
-            <h2><a href="#" class="crosshair">crosshair</a></h2>
-            <h2><a href="#" class="default">default</a></h2>
-            <h2><a href="#" class="e-resize">e-resize</a></h2>
-            <h2><a href="#" class="ew-resize">ew-resize</a></h2>
-            <h2><a href="#" class="grab">grab</a></h2>
-            <h2><a href="#" class="grabbing">grabbing</a></h2>
-            <h2><a href="#" class="help">help</a></h2>
-            <h2><a href="#" class="move">move</a></h2>
-            <h2><a href="#" class="n-resize">n-resize</a></h2>
-            <h2><a href="#" class="ne-resize">ne-resize</a></h2>
-            <h2><a href="#" class="nesw-resize">nesw-resize</a></h2>
-            <h2><a href="#" class="ns-resize">ns-resize</a></h2>
-            <h2><a href="#" class="nwse-resize">nwse-resize</a></h2>
-            <h2><a href="#" class="no-drop">no-drop</a></h2>
-            <h2><a href="#" class="none">none</a></h2>
-            <h2><a href="#" class="not-allowed">not-allowed</a></h2>
-            <h2><a href="#" class="progress">progress</a></h2>
-            <h2><a href="#" class="row-resize">row-resize</a></h2>
-            <h2><a href="#" class="text">text</a></h2>
-            <h2><a href="#" class="url2">url custom 2 smile</a></h2>
-            <h2><a href="#" class="pointer">pointer</a></h2>
+        <p><a href="https://www.w3schools.com/cssref/pr_class_cursor.php">🔗 W3schools article on stylin' cursor properties</a></p>
+        <hr>
+        <p>STANDARD PRESETS</p>
+            <p><a href="#" class="alias">alias</a><a href="#" class="all-scroll">all-scroll</a><a href="#" class="auto">auto</a><a href="#" class="cell">cell</a><a href="#" class="col-resize">col-resize</a><a href="#" class="context-menu">context-menu</a><a href="#" class="copy">copy</a><a href="#" class="crosshair">crosshair</a><a href="#" class="default">default</a><a href="#" class="e-resize">e-resize</a><a href="#" class="ew-resize">ew-resize</a><a href="#" class="grab">grab</a>
+            <a href="#" class="grabbing">grabbing</a><a href="#" class="help">help</a><a href="#" class="move">move</a><a href="#" class="n-resize">n-resize</a><a href="#" class="ne-resize">ne-resize</a><a href="#" class="nesw-resize">nesw-resize</a><a href="#" class="ns-resize">ns-resize</a><a href="#" class="no-drop">no-drop</a><a href="#" class="none">none</a><a href="#" class="not-allowed">not-allowed</a><a href="#" class="progress">progress</a><a href="#" class="row-resize">row-resize</a><a href="#" class="text">text</a><a href="#" class="pointer">pointer</a></p>
+        <hr>
+            <p>CUSTOM JOINTS</p>
+            <img src="images/icons8-heart-50.png">
+            <p><a href="#" class="url">url custom heart</a></p>
+
+            <p><a href="#" class="url2">url custom 2 smile</a></p>
+            
     </body>
     <footer>
         <h2>⬅ <a href="index.html">back</a></h2>
