added link for wink cursor

--- a/freecodecamp/CSS-cursor-fun.html
+++ b/freecodecamp/CSS-cursor-fun.html
@@ -17,12 +17,14 @@
             <p><a href="#" class="alias">alias</a><a href="#" class="all-scroll">all-scroll</a><a href="#" class="auto">auto</a><a href="#" class="cell">cell</a><a href="#" class="col-resize">col-resize</a><a href="#" class="context-menu">context-menu</a><a href="#" class="copy">copy</a><a href="#" class="crosshair">crosshair</a><a href="#" class="default">default</a><a href="#" class="e-resize">e-resize</a><a href="#" class="ew-resize">ew-resize</a><a href="#" class="grab">grab</a>
             <a href="#" class="grabbing">grabbing</a><a href="#" class="help">help</a><a href="#" class="move">move</a><a href="#" class="n-resize">n-resize</a><a href="#" class="ne-resize">ne-resize</a><a href="#" class="nesw-resize">nesw-resize</a><a href="#" class="ns-resize">ns-resize</a><a href="#" class="no-drop">no-drop</a><a href="#" class="none">none</a><a href="#" class="not-allowed">not-allowed</a><a href="#" class="progress">progress</a><a href="#" class="row-resize">row-resize</a><a href="#" class="text">text</a><a href="#" class="pointer">pointer</a></p>
         <hr>
-            <p>CUSTOM JOINTS</p>
+            <p>CUSTOM JOINTS: icons by <a target="_blank" href="https://icons8.com">Icons8</a></p>
+
             <img src="images/icons8-heart-50.png">
             <p><a href="#" class="url">url custom heart</a></p>
-
+            <img src="images/icons8-smile-50.png">
             <p><a href="#" class="url2">url custom 2 smile</a></p>
-            
+            <img src="images/icons8-wink-50.png">
+            <p><a href="#" class="url-wink">url custom wink</a></p>
     </body>
     <footer>
         <h2>⬅ <a href="index.html">back</a></h2>
