ongoing cursor property shenanigans

--- a/freecodecamp/CSS-cursor-fun.html
+++ b/freecodecamp/CSS-cursor-fun.html
@@ -25,6 +25,9 @@
             <p><a href="#" class="url2">url custom 2 smile</a></p>
             <img src="images/icons8-wink-50.png">
             <p><a href="#" class="url-wink">url custom wink</a></p>
+        <hr>
+        <p>CUSTOM letters experiment</p>
+        <h2><a href="#" class="url-v">V</a><a href="#" class="url-i">I</a><a href="#" class="url-c">C</a></h2>
     </body>
     <footer>
         <h2>⬅ <a href="index.html">back</a></h2>
