added 3D pointer cursor

--- a/freecodecamp/CSS-cursor-fun.html
+++ b/freecodecamp/CSS-cursor-fun.html
@@ -30,6 +30,6 @@
         <h2><a href="#" class="url-v">V</a><a href="#" class="url-i">I</a><a href="#" class="url-c">C</a></h2>
     </body>
     <footer>
-        <h2>⬅ <a href="index.html">back</a></h2>
+        <h2>⬅ <a href="index.html" class="url-3d-pointer">back</a></h2>
     </footer>
 </html>
