--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <h2>freecodecamp responsive web dev <a href="freecodecamp.html">projects</a></h2>
     <h2>Scrimba <a href="scrimba.html">exercises + notes [2023]</a></h2>
     <h2>Skillcrush refresher <a href="skillcrush.html">projects [2023]</a></h2>
-   
-    <br>
+    <hr>
+    <h2><a href="#">Vision board experiment</a></h2>
 </body>
 
 <footer>
     <p>🪩 <a href="mailto:victoriahfarr@gmail.com">Victoria made this in 2023.</a></p>
-    <p>🦩 photo by <a
+    <p>🦩 photo: <a
         href="https://www.pexels.com/photo/pink-flamingo-inflatable-ring-and-green-inflatable-ring-on-swimming-pool-565999/">Toni
         Cuenca</a></p>
 </footer>
