vision board initial commit

--- a/vision-board.html
+++ b/vision-board.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Be the flamingo.</title>
     <meta charset="UTF-8">
@@ -17,12 +16,7 @@
 
 <body>
     <img src="images/flamingo-floatie.png" width="50%">
-    <h1>Be the flamingo.</h1>
-    <h2>freecodecamp responsive web dev <a href="freecodecamp.html">projects</a></h2>
-    <h2>Scrimba <a href="scrimba.html">exercises + notes [2023]</a></h2>
-    <h2>Skillcrush refresher <a href="skillcrush.html">projects [2023]</a></h2>
-    <hr>
-    <h2><a href="vision-board.html">Vision board experiment</a></h2>
+    <h1>Vision board experiment</h1>
 </body>
 
 <footer>
