pinterest board embed URL add

--- a/vision-board.html
+++ b/vision-board.html
@@ -17,6 +17,8 @@
 <body>
     <img src="images/flamingo-floatie.png" width="50%">
     <h1>Vision board experiment</h1>
+    <a data-pin-do="embedBoard" data-pin-board-width="400" data-pin-scale-height="240" data-pin-scale-width="80" href="https://www.pinterest.com/victoriahfarr/badass-career-branding/"></a>
+    <script async defer src="//assets.pinterest.com/js/pinit.js"></script>
 </body>
 
 <footer>
