changed title to reflect coding practice

--- a/vision-board.html
+++ b/vision-board.html
@@ -17,8 +17,7 @@
 <body>
     <img src="images/flamingo-floatie.png" width="50%">
     <h1>Vision board experiment</h1>
-    <a data-pin-do="embedBoard" data-pin-board-width="400" data-pin-scale-height="240" data-pin-scale-width="80" href="https://www.pinterest.com/victoriahfarr/badass-career-branding/"></a>
-    <script async defer src="//assets.pinterest.com/js/pinit.js"></script>
+  
 </body>
 
 <footer>
@@ -26,6 +25,7 @@
     <p>🦩 photo: <a
         href="https://www.pexels.com/photo/pink-flamingo-inflatable-ring-and-green-inflatable-ring-on-swimming-pool-565999/">Toni
         Cuenca</a></p>
+        <h2><a href="index.html" class="url-3d-pointer">back</a></h2>
 </footer>
 
 </html>
