--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>Be the flamingo.</title>
+    <title>Scrimba + coding practice</title>
     <meta charset="UTF-8">
     <link rel="icon"
         href="https://img.icons8.com/external-tal-revivo-tritone-tal-revivo/32/external-firework-sparkles-with-light-and-explosion-sound-new-tritone-tal-revivo.png"
-        alt="external-firework-sparkles-with-light-and-explosion-sound-new-tritone-tal-revivo">
+        alt="sparkles icon">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
