--- a/index.html
+++ b/index.html
@@ -2,32 +2,29 @@
 <html>
 
 <head>
-    <title>Scrimba + coding practice</title>
+    <title>put the bunny back in the box (model)</title>
     <meta charset="UTF-8">
     <link rel="icon"
-        href="https://img.icons8.com/external-tal-revivo-tritone-tal-revivo/32/external-firework-sparkles-with-light-and-explosion-sound-new-tritone-tal-revivo.png"
-        alt="sparkles icon">
+        href="images/icons8-rabbit-50.png" alt="rabbit icon">
     <link rel="stylesheet" href="styles.css">
+ 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&family=Silkscreen:wght@400;700&display=swap"
-        rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <img src="images/flamingo-floatie.png" width="50%">
-    <h1>Be the flamingo.</h1>
+    <img src="images/coding-bunny-sunglasses-700px.png" width="40%">
+    <h1>put the bunny back in the box (model)</h1>
     <h2>freecodecamp responsive web dev <a href="freecodecamp.html">projects</a></h2>
     <h2>Scrimba <a href="scrimba.html">exercises + notes [2023]</a></h2>
     <h2>Skillcrush refresher <a href="skillcrush.html">projects [2023]</a></h2>
+    <hr>
 </body>
 
 <footer>
     <p>🪩 <a href="mailto:victoriahfarr@gmail.com">Victoria made this in 2023.</a></p>
-    <p>🦩 photo: <a
-        href="https://www.pexels.com/photo/pink-flamingo-inflatable-ring-and-green-inflatable-ring-on-swimming-pool-565999/">Toni
-        Cuenca</a></p>
+    <p>credits go herr.</a></p>
 </footer>
 
 </html>
