--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Be the flamingo.</title>
-        <link rel="icon" href="https://img.icons8.com/external-tal-revivo-tritone-tal-revivo/32/external-firework-sparkles-with-light-and-explosion-sound-new-tritone-tal-revivo.png" alt="external-firework-sparkles-with-light-and-explosion-sound-new-tritone-tal-revivo">
-        <link rel="stylesheet" href="styles.css">
+        <title>coding bunny visits freeCodeCamp</title>
+        <link rel="icon" href="images/icons8-rabbit-50.png" alt="rabbit icon"><link rel="stylesheet" href="styles.css">
+     
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     </head>
     
-    <body>
-        <img src="images/heart-balloons.png" width="50%">
-        <h1>freecodecamp responsive web dev projects.</h1>
-            <h2><a href="freecodecamp/survey-form/index.html">freeCodeCamp Survey Form</a></h2>
+    <body class="purple-background">
+        <img src="images/coding-bunny-sitting-700px.png" width="50%">
+        <h1><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/">freecodecamp</a> responsive web dev certification projects.</h1>
+            <h2>freeCodeCamp <a href="freecodecamp/survey-form/index.html">Survey Form</a></h2>
             <img src="images/FCC-project-1-screenshot.png" width="50%">
-            <hr>
-            <h2><a href="test-gallery.html">Test CSS Gallery (Responsive)</a></h2>
             <hr>
             <h2><a href="freecodecamp/CSS-cursor-fun.html">CSS Cursor Property Test Page</a></h2>
             <h2>⬅ <a href="index.html">back</a></h2>
