added credits section URLs and styling

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -16,10 +16,9 @@
             <img src="images/FCC-project-1-screenshot.png" width="50%">
             <hr>
             <h2><a href="freecodecamp/CSS-cursor-fun.html">CSS Cursor Property Test Page</a></h2>
-            <h2>⬅ <a href="index.html">back</a></h2>
     </body>
     <footer>
-        <p>💌 <a href="mailto:victoriahfarr@gmail.com">Victoria made this in 2023.</a></p>
-        <p>photo by <a href="#"></a></p>
+        <hr>
+        <h2>⬅ <a href="index.html">BACK TO THE BURROW</a></h2>
     </footer>
 </html>
