--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
 
 <footer>
     <p>🪩 <a href="mailto:victoriahfarr@gmail.com">Victoria made this in 2023.</a></p>
-    <p>credits go herr.</a></p>
+    <br>
+    <h3>✨CREDITS✨</h3>
+    <p>images: <a href="https://www.pexels.com/@shvetsa/">Anna Shvets</a>
+    type: <a href="https://fonts.google.com/specimen/Azeret+Mono?category=Monospace">Azeret Mono</a>
+    icons: <a href="https://icons8.com/">Icons8</a></p>
 </footer>
 
 </html>
