--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
 <footer>
     <p>🪩 <a href="mailto:victoriahfarr@gmail.com">Victoria made this in 2023.</a></p>
     <br>
-    <h3>✨CREDITS✨</h3>
-    <p>images: <a href="https://www.pexels.com/@shvetsa/">Anna Shvets</a>
-    type: <a href="https://fonts.google.com/specimen/Azeret+Mono?category=Monospace">Azeret Mono</a>
-    icons: <a href="https://icons8.com/">Icons8</a></p>
+    <h3>✨ CREDITS ✨</h3>
+    <ul>
+        <li>images: <a href="https://www.pexels.com/@shvetsa/">Anna Shvets</a></li>
+        <li>type: <a href="https://fonts.google.com/specimen/Azeret+Mono?category=Monospace">Azeret Mono</a></li>
+        <li>icons: <a href="https://icons8.com/">Icons8</a></p></li>
+    </ul>
 </footer>
 
 </html>
