updated footer styling to faux button styling

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -18,7 +18,6 @@
             <h2><a href="freecodecamp/CSS-cursor-fun.html">CSS Cursor Property Test Page</a></h2>
     </body>
     <footer>
-        <hr>
-        <h2>⬅ <a href="index.html">BACK TO THE BURROW</a></h2>
+        <a class="back-button" href="index.html">back to the burrow.</a>
     </footer>
 </html>
