--- a/scrimba.html
+++ b/scrimba.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Be the flamingo.</title>
-        <link rel="icon" href="https://img.icons8.com/external-tal-revivo-tritone-tal-revivo/32/external-firework-sparkles-with-light-and-explosion-sound-new-tritone-tal-revivo.png" alt="external-firework-sparkles-with-light-and-explosion-sound-new-tritone-tal-revivo">
-        <link rel="stylesheet" href="styles.css">
+        <title>coding bunny visits the land of Scrimba.</title>
+        <link rel="icon" href="images/icons8-rabbit-50.png" alt="rabbit icon"><link rel="stylesheet" href="styles.css">
+        
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
     </head>
     <body>
-        <img src="images/shell.png" width="25%">
-        <h1>Scrimba projects.</h1>
+        <img src="images/coding-bunny-stands-700px.png" width="50%">
+        <h1>Scrimba exercise notes + projects</h1>
             <ul>
                 <li>
-                    <h3><a href="scrimba/build-a-personal-site/index.html">Build a Personal Website</a></h3>
-                </li>
-                <li>
-                    <h4>💻 <a href="vhf-portfolio.html">VHF portfolio coding practice.</a></h4>
+                    <p>Exercise: <a href="scrimba/build-a-personal-site/index.html">Build a Personal Website</a></p>
                 </li>
             </ul>
         <br>
@@ -24,6 +22,5 @@
     </body>
     <footer>
         <p>💌 <a href="mailto:victoriahfarr@gmail.com">Victoria made this in 2023.</a></p>
-        <p>photo by <a href="#"></a></p>
     </footer>
 </html>
