--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
 </body>
 
 <footer>
-    <p>🪩 <a href="mailto:victoriahfarr@gmail.com">Victoria made this in 2023.</a></p>
-    <br>
     <h3>✨ CREDITS ✨</h3>
     <ul>
+        <li>🪩 <a href="mailto:victoriahfarr@gmail.com">Victoria made this in 2023.</a></li>
         <li>images: <a href="https://www.pexels.com/@shvetsa/">Anna Shvets</a></li>
         <li>type: <a href="https://fonts.google.com/specimen/Azeret+Mono?category=Monospace">Azeret Mono</a></li>
         <li>icons: <a href="https://icons8.com/">Icons8</a></p></li>
