update skillcrush section with new image + footer

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -10,13 +10,10 @@
     </head>
     
     <body>
-        <img src="images/disco-sprinkles.png"  width="80%">
-        <h1>Skillcrush projects.</h1>
-        <br>
-        <h2>⬅ <a href="index.html">back</a></h2>
+        <img src="images/baby-coding-bunny-700px.png" width="50%">
+        <h1>baby coding bunny projects (archive)</h1>
     </body>
     <footer>
-        <p>💌 <a href="mailto:victoriahfarr@gmail.com">Victoria made this in 2023.</a></p>
-        <p>photo by <a href="#"></a></p>
+        <a class="back-button" href="index.html">back to the burrow.</a>
     </footer>
 </html>
