added emoji to li footer credits

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <h3>✨ CREDITS ✨</h3>
     <ul>
         <li>🪩 <a href="mailto:victoriahfarr@gmail.com">Victoria made this in 2023.</a></li>
-        <li>images: <a href="https://www.pexels.com/@shvetsa/">Anna Shvets</a> + <a href="https://www.pexels.com/photo/rabbit-on-person-s-hands-6957670/">Mikhail Nilov</a></li>
-        <li>type: <a href="https://fonts.google.com/specimen/Azeret+Mono?category=Monospace">Azeret Mono</a></li>
-        <li>icons: <a href="https://icons8.com/">Icons8</a></p></li>
+        <li>🖼️ images: <a href="https://www.pexels.com/@shvetsa/">Anna Shvets</a> + <a href="https://www.pexels.com/photo/rabbit-on-person-s-hands-6957670/">Mikhail Nilov</a></li>
+        <li>🔠 type: <a href="https://fonts.google.com/specimen/Azeret+Mono?category=Monospace">Azeret Mono</a></li>
+        <li>🐇 icons: <a href="https://icons8.com/">Icons8</a></p></li>
     </ul>
 </footer>
 
