hr element styling update

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <h1>put the bunny back in the box (model)</h1>
     <h2>freecodecamp responsive web dev <a href="freecodecamp.html">projects</a></h2>
     <h2>Scrimba <a href="scrimba.html">exercises + notes [2023]</a></h2>
-    <h2>Skillcrush refresher <a href="skillcrush.html">projects [2023]</a></h2>
+    <h2>Sk. refresher + Javascript course<a href="skillcrush.html">projects [2023]</a></h2>
     <hr>
 </body>
 
 <footer>
     <h3>✨ CREDITS ✨ CREDITS ✨ CREDITS ✨</h3>
     <ul>
-        <li>🪩 <a href="https://github.com/Victoria-Farr">Victoria made this in 2023.</a></li>
+        <li>🪩 Victoria made this in 2023. <a href="https://github.com/Victoria-Farr">Her GitHub burrow.</a></li>
         <li>🖼️ images: <a href="https://www.pexels.com/@shvetsa/">Anna Shvets</a> + <a href="https://www.pexels.com/photo/rabbit-on-person-s-hands-6957670/">Mikhail Nilov</a></li>
-        <li>🔠 type: <a href="https://fonts.google.com/specimen/Azeret+Mono?category=Monospace">Azeret Mono</a></li>
+        <li>🔠 type: <a href="https://fonts.google.com/specimen/Azeret+Mono?category=Monospace">Azeret Mono</a> via Google Fonts</li>
         <li>🐇 icons: <a href="https://icons8.com/">Icons8</a></p></li>
     </ul>
 </footer>
