update scrimba page footer

--- a/scrimba.html
+++ b/scrimba.html
@@ -21,6 +21,6 @@
         <h2>⬅ <a href="index.html">back</a></h2>
     </body>
     <footer>
-        <p>💌 <a href="mailto:victoriahfarr@gmail.com">Victoria made this in 2023.</a></p>
+        <a class="back-button" href="index.html">back to the burrow.</a>
     </footer>
 </html>
