--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </body>
 
 <footer>
-    <h3>✨ CREDITS ✨ CREDITS ✨ CREDITS ✨</h3>
+    <h3>✨ CREDITS ✨</h3>
     <ul>
         <li>🪩 Victoria made this in 2023. <a href="https://github.com/Victoria-Farr">Her GitHub burrow.</a></li>
         <li>🖼️ images: <a href="https://www.pexels.com/@shvetsa/">Anna Shvets</a> + <a href="https://www.pexels.com/photo/rabbit-on-person-s-hands-6957670/">Mikhail Nilov</a></li>
