added ul li items for projects list

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -12,6 +12,27 @@
     <body>
         <img src="images/baby-coding-bunny-700px.png" width="40%">
         <h1>baby coding bunny projects (archive)</h1>
+        <hr>
+        <h2>Simple one-page websites</h2>
+        <ul>
+            <li>Developer portfolio site</li>
+            <li>Fresh food truck</li>
+            <li>Vision board</li>
+            <li>Recipe Cards</li>
+        </ul>
+        <h2>Multi-page responsive websites</h2>
+        <ul>
+            <li>Unplugged</li>
+            <li>Responsive food truck website</li>
+        </ul>
+        <h2>Javascript projects</h2>
+        <ul>
+            <li>Guess the Word Game</li>
+            <li>GitHub Repo Gallery</li>
+            <li>Hotel Booking App</li>
+            <li>Sticky Note App</li>
+            <li>Name Tag Generator</li>
+        </ul>
     </body>
     <footer>
         <a class="back-button" href="index.html">back to the burrow.</a>
