added h1 for elder bunny coding projects

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>baby coding bunny projects (archive)</title>
+        <title>baby coding bunny projects (+ archive)</title>
         <meta charset="UTF-8">
         <link rel="icon" href="images/icons8-rabbit-50.png" alt="rabbit icon"><link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,15 +11,16 @@
     
     <body>
         <img src="images/baby-coding-bunny-700px.png" width="40%">
-        <h1>baby coding bunny projects (archive)</h1>
+        <h1>baby coding bunny projects (+ archive)</h1>
         <hr>
         <h2>Simple one-page websites</h2>
         <ul>
-            <li>Developer portfolio site</li>
-            <li>Fresh food truck</li>
-            <li>Vision board</li>
-            <li>Recipe Cards</li>
+            <li>Developer portfolio site <a href="#">🧈 archive version</a></li>
+            <li>Fresh food truck <a href="#">🌽 archive version</a></li>
+            <li>Vision board <a href="#">😶‍🌫️ archive version</a></li>
+            <li>Recipe Cards <a href="#">📒 archive version</a></li>
         </ul>
+        <h1>elder bunny coding projects</h1>
         <h2>Multi-page responsive websites</h2>
         <ul>
             <li>Unplugged</li>
