--- a/skillcrush.html
+++ b/skillcrush.html
@@ -15,10 +15,10 @@
         <hr>
         <h2>Simple one-page websites</h2>
         <ul>
-            <li>Developer portfolio site <a href="#">🧈 archive version</a></li>
-            <li>Fresh food truck <a href="#">🌽 archive version</a></li>
-            <li>Vision board <a href="#">😶‍🌫️ archive version</a></li>
-            <li>Recipe Cards <a href="#">📒 archive version</a></li>
+            <li>Developer portfolio site <a href="#">2021 🧈 archive version</a></li>
+            <li>Fresh food truck <a href="skillcrush/rogue-pickings-2021/index.html">2021 🌽 archive version</a></li>
+            <li>Vision board <a href="skillcrush/vision-board-project/index.html">2021 😶‍🌫️ archive version</a></li>
+            <li>Recipe Cards <a href="#">2021 📒 archive version</a></li>
         </ul>
         <h1>elder bunny coding projects</h1>
         <h2>Multi-page responsive websites</h2>
