added <span> elements

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -15,10 +15,13 @@
         <hr>
         <h2>Simple one-page websites</h2>
         <ul>
-            <li>Developer portfolio site <a href="#">2021 🧈 archive version</a></li>
-            <li>Fresh food truck <a href="skillcrush/rogue-pickings-2021/index.html">2021 🌽 archive version</a></li>
-            <li>Vision board <a href="skillcrush/vision-board-project/index.html">2021 😶‍🌫️ archive version</a></li>
-            <li>Recipe Cards <a href="#">2021 📒 archive version</a></li>
+            <li><span><a href="#">Developer portfolio site</a></span> <a href="#">2021 🧈 archive version</a></li>
+
+            <li><span><a href="#">Fresh food truck</a></span> <a href="skillcrush/rogue-pickings-2021/index.html">2021 🌽 archive version</a></li>
+
+            <li><span><a href="#">Vision board</a></span> <a href="skillcrush/vision-board-project/index.html">2021 😶‍🌫️ archive version</a></li>
+
+            <li><span><a href="#">Recipe Cards</a></span> <a href="#">2021 📒 archive version</a></li>
         </ul>
         <h1>elder bunny coding projects</h1>
         <h2>Multi-page responsive websites</h2>
