added list of ipsum gen for future project

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -21,7 +21,7 @@
 
             <li><span><a href="#">Vision board</a></span> <a href="skillcrush/vision-board-project/index.html">2021 😶‍🌫️ archive version</a></li>
 
-            <li><span><a href="#">Recipe Cards</a></span> <a href="#">2021 📒 archive version</a></li>
+            <li><span><a href="#">Recipe Cards</a></span> <a href="skillcrush/recipe-card-site/index.html">2021 📒 archive version</a></li>
         </ul>
         <h1>elder bunny coding projects</h1>
         <h2>Multi-page responsive websites</h2>
