--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 
 <body>
     <img src="images/coding-bunny-sunglasses-700px.png" width="40%">
-    <h1>put the bunny back in the box (model)</h1>
-    <h2>freecodecamp responsive web dev <a href="freecodecamp.html">projects</a></h2>
-    <h2>Scrimba <a href="scrimba.html">exercises + notes [2023]</a></h2>
-    <h2>Sk. refresher + Javascript course <a href="skillcrush.html">projects [2023]</a></h2>
+    <div class="courses">
+        <h1>put the bunny back in the box (model)</h1>
+        <h2>freecodecamp responsive web dev <a href="freecodecamp.html">projects</a></h2>
+        <h2>Scrimba <a href="scrimba.html">exercises + notes [2023]</a></h2>
+        <h2>Sk. refresher + Javascript course <a href="skillcrush.html">projects [2023]</a></h2>
+    </div>
     <hr>
 </body>
 
