use FCC survey form project img as URL

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -12,10 +12,14 @@
     <body class="purple-background">
         <img src="images/coding-bunny-sitting-700px.png" width="40%">
         <h1><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/">freecodecamp</a> responsive web dev certification projects.</h1>
-            <h2>freeCodeCamp <a href="freecodecamp/survey-form/index.html">Survey Form</a></h2>
-            <img src="images/FCC-project-1-screenshot.png" width="50%">
-            <hr>
-            <h2><a href="freecodecamp/CSS-cursor-fun.html">CSS Cursor Property Test Page</a></h2>
+            <div class="fcc-projects">
+                <a href="freecodecamp/survey-form/index.html">
+                <img src="images/FCC-project-1-screenshot.png" width="50%">
+                </a>
+        
+        </div>
+        <hr>
+        <h2><a href="freecodecamp/CSS-cursor-fun.html">CSS Cursor Property Test Page</a></h2>
     </body>
     <footer>
         <a class="back-button" href="index.html">back to the burrow.</a>
