added target blank attribute

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -13,7 +13,7 @@
         <img src="images/coding-bunny-sitting-700px.png" width="40%">
         <h1><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/">freecodecamp</a> responsive web dev certification projects.</h1>
             <div class="fcc-projects">
-                <a href="freecodecamp/survey-form/index.html">
+                <a href="freecodecamp/survey-form/index.html" target="_blank">
                 <img src="images/FCC-project-1-screenshot.png" width="50%">
                 </a>
         
