added left margin for p element

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -19,7 +19,7 @@
         
         </div>
         <hr>
-        <h2><a href="freecodecamp/CSS-cursor-fun.html">CSS Cursor Property Test Page</a></h2>
+        <p><a href="freecodecamp/CSS-cursor-fun.html">CSS Cursor Property Test Page</a></p>
     </body>
     <footer>
         <a class="back-button" href="index.html">back to the burrow.</a>
