added full name for third project h2

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="courses">
         <h2>freecodecamp responsive web dev <a href="freecodecamp.html">projects</a></h2>
         <h2>Scrimba <a href="scrimba.html">exercises + notes [2023]</a></h2>
-        <h2>Sk. refresher + Javascript course <a href="skillcrush.html">projects [2023]</a></h2>
+        <h2>Skillcrush refresher + Javascript course <a href="skillcrush.html">projects [2023]</a></h2>
     </div>
     <hr>
 </body>
