removed extra div tag

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -12,12 +12,17 @@
     <body class="purple-background">
         <img src="images/coding-bunny-sitting-700px.png" width="40%">
         <h1><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/" target="_blank">freecodecamp</a> responsive web dev certification projects.</h1>
+
             <div class="fcc-projects">
                 <a href="freecodecamp/survey-form/index.html" target="_blank">
-                <img src="images/FCC-project-1-screenshot.png" width="50%">
+                <img src="images/FCC-project-1-screenshot.png">
                 </a>
-        
-        </div>
+            
+                <a href="freecodecamp/survey-form/index.html" target="_blank">
+                <img src="images/FCC-project-1-screenshot.png">
+                </a>
+            </div>
+
         <hr>
         <p><a href="freecodecamp/CSS-cursor-fun.html">CSS Cursor Property Test Page</a></p>
     </body>
