added project placeholder

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -15,12 +15,13 @@
 
             <div class="fcc-projects">
                 <a href="freecodecamp/survey-form/index.html" target="_blank">
-                <img src="images/FCC-project-1-screenshot.png">
-                </a>
+                <img src="images/FCC-project-1-screenshot.png"></a>
             
                 <a href="freecodecamp/survey-form/index.html" target="_blank">
-                <img src="images/FCC-project-1-screenshot.png">
-                </a>
+                <img src="images/FCC-project-1-screenshot.png"></a>
+
+                <a href="freecodecamp/survey-form/index.html" target="_blank">
+                <img src="images/FCC-project-1-screenshot.png"></a>
             </div>
 
         <hr>
