--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     </head>
     
-    <body class="purple-background">
+    <body>
         <img src="images/coding-bunny-sitting-700px.png" width="40%">
         <h1><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/" target="_blank">freecodecamp</a> responsive web dev certification projects.</h1>
 
@@ -17,11 +17,11 @@
                 <a href="freecodecamp/survey-form/index.html" target="_blank">
                 <img src="images/FCC-project-1-screenshot.png"></a>
             
-                <a href="freecodecamp/survey-form/index.html" target="_blank">
-                <img src="images/FCC-project-1-screenshot.png"></a>
+                <a href="#" target="_blank">
+                <img src="images/project-placeholder.png"></a>
 
-                <a href="freecodecamp/survey-form/index.html" target="_blank">
-                <img src="images/FCC-project-1-screenshot.png"></a>
+                <a href="#" target="_blank">
+                <img src="images/project-placeholder.png"></a>
             </div>
 
         <hr>
