--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -22,6 +22,12 @@
 
                 <a href="#" target="_blank">
                 <img src="images/project-placeholder.png"></a>
+
+                <a href="#" target="_blank">
+                    <img src="images/project-placeholder.png"></a>
+
+                    <a href="#" target="_blank">
+                        <img src="images/project-placeholder.png"></a>
             </div>
 
         <hr>
