--- a/skillcrush.html
+++ b/skillcrush.html
@@ -11,7 +11,7 @@
     
     <body class="baby-coding-bunny">
         <img src="images/baby-coding-bunny-700px.png" width="40%">
-        <h1>baby coding bunny projects (+ archive)</h1>
+        <h1>baby coding bunny projects (Skillcrush archive)</h1>
         <hr>
         <h2>Simple one-page websites</h2>
         <ul>
