added class to <ul>

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -14,7 +14,7 @@
         <h1>baby coding bunny projects (Skillcrush archive)</h1>
         <hr>
         <h2>Simple one-page websites</h2>
-        <ul>
+        <ul class="skillcrush-projects">
             <li><span><a href="#">Developer portfolio site</a></span> <a href="#">2021 🧈 archive version</a></li>
 
             <li><span><a href="#">Fresh food truck</a></span> <a href="skillcrush/rogue-pickings-2021/index.html">2021 🌽 archive version</a></li>
