--- a/skillcrush.html
+++ b/skillcrush.html
@@ -12,16 +12,20 @@
     <body class="baby-coding-bunny">
         <img src="images/baby-coding-bunny-700px.png" width="40%">
         <h1>baby coding bunny projects (Skillcrush archive)</h1>
+        
+        <div>
         <h2>Simple one-page websites</h2>
-        <ul class="skillcrush-projects">
-            <li><span><a href="#">Developer portfolio site</a></span> <a href="#">2021 🧈 archive version</a></li>
+            <ul class="skillcrush-projects">
+                <li><span><a href="#">Developer portfolio site</a></span> <a href="#">2021 🧈 archive version</a></li>
 
-            <li><span><a href="#">Fresh food truck</a></span> <a href="skillcrush/rogue-pickings-2021/index.html">2021 🌽 archive version</a></li>
+                <li><span><a href="#">Fresh food truck</a></span> <a href="skillcrush/rogue-pickings-2021/index.html">2021 🌽 archive version</a></li>
 
-            <li><span><a href="#">Vision board</a></span> <a href="skillcrush/vision-board-project/index.html">2021 😶‍🌫️ archive version</a></li>
+                <li><span><a href="#">Vision board</a></span> <a href="skillcrush/vision-board-project/index.html">2021 😶‍🌫️ archive version</a></li>
 
-            <li><span><a href="#">Recipe Cards</a></span> <a href="skillcrush/recipe-card-site/index.html">2021 📒 archive version</a></li>
-        </ul>
+                <li><span><a href="#">Recipe Cards</a></span> <a href="skillcrush/recipe-card-site/index.html">2021 📒 archive version</a></li>
+            </ul>
+        </div>
+        
         <h1>elder bunny coding projects</h1>
         <h2>Multi-page responsive websites</h2>
         <ul>
