moved skillcrush-projects class to div from ul

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -13,9 +13,9 @@
         <img src="images/baby-coding-bunny-700px.png" width="40%">
         <h1>baby coding bunny projects (Skillcrush archive)</h1>
         
-        <div>
+        <div class="skillcrush-projects">
         <h2>Simple one-page websites</h2>
-            <ul class="skillcrush-projects">
+            <ul>
                 <li><span><a href="#">Developer portfolio site</a></span> <a href="#">2021 🧈 archive version</a></li>
 
                 <li><span><a href="#">Fresh food truck</a></span> <a href="skillcrush/rogue-pickings-2021/index.html">2021 🌽 archive version</a></li>
@@ -25,7 +25,7 @@
                 <li><span><a href="#">Recipe Cards</a></span> <a href="skillcrush/recipe-card-site/index.html">2021 📒 archive version</a></li>
             </ul>
         </div>
-        
+
         <h1>elder bunny coding projects</h1>
         <h2>Multi-page responsive websites</h2>
         <ul>
