set up new section for archive projects

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -25,6 +25,11 @@
                 <li><span><a href="#">Recipe Cards</a></span> <a href="skillcrush/recipe-card-site/index.html">2021 📒 archive version</a></li>
             </ul>
         </div>
+        <div class="skillcrush-projects">
+            <ul>
+                <li>Developer portfolio site: 2021 version</li>
+            </ul>
+        </div>
 
         <h1>elder bunny coding projects</h1>
         <h2>Multi-page responsive websites</h2>
