moved all archive projects to new section

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -16,18 +16,21 @@
         <div class="skillcrush-projects">
         <h2>Simple one-page websites</h2>
             <ul>
-                <li><span><a href="#">Developer portfolio site</a></span> <a href="#">2021 🧈 archive version</a></li>
+                <li>Developer portfolio site</li>
 
-                <li><span><a href="#">Fresh food truck</a></span> <a href="skillcrush/rogue-pickings-2021/index.html">2021 🌽 archive version</a></li>
+                <li>Fresh food truck</li>
 
-                <li><span><a href="#">Vision board</a></span> <a href="skillcrush/vision-board-project/index.html">2021 😶‍🌫️ archive version</a></li>
+                <li>Vision board</li>
 
-                <li><span><a href="#">Recipe Cards</a></span> <a href="skillcrush/recipe-card-site/index.html">2021 📒 archive version</a></li>
+                <li>Recipe Cards</li>
             </ul>
         </div>
         <div class="skillcrush-projects">
             <ul>
                 <li>Developer portfolio site: 2021 version</li>
+                <li><a href="skillcrush/rogue-pickings-2021/index.html">Fresh food truck</a> 2021 version</li>
+                <li><a href="skillcrush/vision-board-project/index.html">Vision Board</a> 2021 version</li>
+                <li>Recipe Cards: 2021 version</li>
             </ul>
         </div>
 
