added <h3> for archive section

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -26,6 +26,7 @@
             </ul>
         </div>
         <div class="skillcrush-projects">
+            <h3>2021 Skillcrush projects</h3>
             <ul>
                 <li>Developer portfolio site: 2021 version</li>
                 <li><a href="skillcrush/rogue-pickings-2021/index.html">Fresh food truck</a> 2021 version</li>
