edited existing project URLs with target blank

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -14,7 +14,7 @@
         <h1>baby coding bunny projects (Skillcrush archive)</h1>
         
         <div class="skillcrush-projects">
-        <h2>Simple one-page websites</h2>
+        <h2>Simple 1-page websites</h2>
             <ul>
                 <li>Developer portfolio site</li>
 
@@ -29,26 +29,30 @@
             <h2>2021 Skillcrush projects</h2>
             <ul>
                 <li>Developer portfolio site: 2021 version</li>
-                <li><a href="skillcrush/rogue-pickings-2021/index.html">Fresh food truck</a> 2021 version</li>
-                <li><a href="skillcrush/vision-board-project/index.html">Vision Board</a> 2021 version</li>
+                <li><a href="skillcrush/rogue-pickings-2021/index.html" target="_blank">Fresh food truck</a> 2021 version</li>
+                <li><a href="skillcrush/vision-board-project/index.html" target="_blank">Vision Board</a> 2021 version</li>
                 <li>Recipe Cards: 2021 version</li>
             </ul>
         </div>
 
         <h1>elder bunny coding projects</h1>
-        <h2>Multi-page responsive websites</h2>
-        <ul>
-            <li>Unplugged</li>
-            <li>Responsive food truck website</li>
-        </ul>
-        <h2>Javascript projects</h2>
-        <ul>
-            <li>Guess the Word Game</li>
-            <li>GitHub Repo Gallery</li>
-            <li>Hotel Booking App</li>
-            <li>Sticky Note App</li>
-            <li>Name Tag Generator</li>
-        </ul>
+        <div class="skillcrush-projects">
+            <h2>Multi-page responsive websites</h2>
+                <ul>
+                    <li>Unplugged</li>
+                    <li>Responsive food truck website</li>
+                </ul>
+        </div>
+        <div class="skillcrush-projects">
+            <h2>Javascript projects</h2>
+                <ul>
+                    <li>Guess the Word Game</li>
+                    <li>GitHub Repo Gallery</li>
+                    <li>Hotel Booking App</li>
+                    <li>Sticky Note App</li>
+                    <li>Name Tag Generator</li>
+                </ul>
+        </div>
         <hr>
     </body>
     <footer>
